# src/laradock/routes/api.php
@@ -13,7 +13,16 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-
+/*
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+*/
+Route::group([
+    'prefix' => 'v1', 
+    'as' => 'api.', 
+    'namespace' => 'Api\V1\Admin', 
+    'middleware' => ['auth:api']
+  ], function () {
+      Route::apiResource('projects', 'ProjectsApiController');
+  });
